# 4A2-CFD

./: .gitignore  CMakeLists.txt  README.md  advection_output.txt  cmakelists.txt  setup.py
.github/workflows/: main.yml
advection/: CMakeLists.txt  advection.cpp  advection.f90  cmakelists.txt
cases/bend/: conv_bend.csv  input_bend.txt
cases/bump/: conv_bump.csv  input_bump.txt
cases/multi/: input_multi.txt
cases/naca/: conv_naca.csv  input_naca.txt
cases/naca0012/: conv_naca0012.csv  geom_naca0012.txt  input_naca0012.txt
cases/naca2412/: conv_naca2412.csv  input_naca2412.txt
cases/tube/: conv_tube.csv  input_tube.txt
cases/tunnel/: conv_tunnel.csv  geom_tunnel.txt  input_tunnel.txt
cases/turbine_c/: conv_turbine_c.csv  geom_turbine_c.txt  input_turbine_c.txt
cases/turbine_h/: conv_turbine_h.csv  input_turbine_h.txt
cases/waves/: conv_waves.csv  input_waves.txt
output/: advection_output.txt  conv_bend.csv  conv_bump.csv
postprocessing/: plot_advection.py  plot_airfoil_cp.py  plot_contours.py  plot_conv.py  plot_coord.py  plot_guess.py  routines.py
preprocessing/: generate_case.py
report/: output.txt  plot_compute_time.py
report/data/: bend_runs_1.0.txt  bump_runs_1.0.txt
report/final/: effort_accuracy.py  final.synctex(busy)  final.tex  foil_cases.py  improvements.py  runtime_enviroment.py  table_of_parameters.py
report/final/data/: 0012_swp.mat  2412_swp.mat  cl_alpha.csv  improve_comparison.csv  improve_comparison_cfl.csv  improve_comparison_ni.csv  results.csv  rkN_bump.csv  smoothing_cfl.csv  smoothing_fcorr.csv  smoothing_ni.csv  smoothing_sfac_res.csv
report/interim/: analysis.py  compiler_tests.xlsx  interim.tex  plot_compute_time.py
report/interim/data/: bend_runs_1.0.txt  bump_runs_1.0.txt
solver/: CMakeLists.txt  cmakelists.txt  example.f90  fortranBridge.cpp  fortranBridge.h  main.cpp  mainWindow.cpp  mainWindow.h  qtio.f90  routines.cpp  routines.h  solveWorker.cpp  solveWorker.h  types.f90  types.h
solver/Code/: advection.f90  apply_bconds.f90  calc_areas.f90  check_mesh.f90  check_stop.f90  euler_iteration.f90  flow_guess.f90  generate_mesh.f90  plot_advection.py  qtio.f90  read_geom.f90  read_settings.f90  set_timestep.f90  solver.f90  stencils.f90  types.f90  types.h  write_output.f90
solver/block_mesh_solver/: allocate_arrays.f90  apply_patch.f90  check_conv.f90  check_mesh.f90  check_stop.f90  euler_iteration.f90  flow_guess.f90  generate_mesh.f90  qtio.f90  read_geom.f90  read_settings.f90  routines.f90  set_secondary.f90  set_timestep.f90  solver.f90  write_output.f90
solver/curve_fill_solver/: euler_flux.f90  generate_mesh.f90  lod.py  mesh_gen.f90  mesh_traverse.f90  mesh_utils.f90  neighbours.f90  reorder.f90  solver.f90  test.py  test_hilbert.py  test_hilbert2.py  test_hilbert3.py  types.f90  utils.f90
solver/fortran/: allocate_arrays.f90  apply_bconds.f90  calc_areas.f90  check_conv.f90  check_mesh.f90  check_stop.f90  euler_iteration.f90  euler_iteration.f90.orig  flow_guess.f90  flow_guess.f90.orig  flux_stencil.f90  generate_mesh.f90  misc.f90  qtio.f90  read_mesh.f90  read_settings.f90  routines.f90  set_secondary.f90  set_timestep.f90  smooth_stencil.f90  solver.f90  stencils.f90  types.f90  write_output.f90
solver/gui/: consoleWidget.cpp  consoleWidget.h  convWidget.cpp  convWidget.h  inputWidget.cpp  inputWidget.h  visWidget.cpp  visWidget.h
solver/preprocessing/: generate_case.py
